--- a/chrome-plugin/css/style.css
+++ b/chrome-plugin/css/style.css
@@ -92,7 +92,7 @@ a{
 }
 #root #list li{
     margin-bottom: 5px;
-    padding: 0 0px 4px 0px;
+    padding: 0 0px 6px 0px;
     margin-right: 15px;
     border-bottom: 1px solid #eee;
     display: flex;
@@ -114,6 +114,7 @@ a{
     display: inline-block;
     word-break: break-all;
     padding-left: 8px;
+    position: relative;
 }
 
 #root #list li.first a{
@@ -134,4 +135,16 @@ a{
 
 #root #list li a span.word{
     color: #3A8FFF;
+}
+#root #list li a button.edit{
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background: url('../images/edit.png');
+    background-size: cover;
+    border: none;
+    margin-left: 10px;
+    position: relative;
+    bottom: -2px;
+    cursor: pointer;
 }
